# django-pavlova-project

./: CHANGES.rst  LICENSE.txt  README.md  README.rst  bootstrap.sh  cookiecutter.json  manage.py  setup.cfg  setup.py  templates
djangoproject/djangoproject/: __init__.py  wsgi.py
djangoproject/djangoproject/settings/: __init__.py  apps.py  appsettings.py  base.py  db.py  email.py  filepaths.py  locale.py  logging.py  middleware.py  settings.py  staticmedia.py  template.py
project/dev/fixtures/: initial_data.json
project/project_name/: __init__.py  startup.py  wsgi.py
project/project_name/settings/: __init__.py  _settings.py  apps.py  base.py  cache.py  db.py  staticmedia.py  template.py
project/templates/: 500.html
requirements/: _base.txt  dev.txt  production.txt  test.txt
{{cookiecutter.repo-name}}/{{cookiecutter.repo-name}}/: __init__.py  startup.py
{{cookiecutter.repo-name}}/{{cookiecutter.repo-name}}/settings/: email.py  staticmedia.py
