
[metadata]
name = {{ project_name }}
version = 0.0
description-file =  README.rst
                    CHANGES.rst
# license = 
requires-dist = setuptools

[files]
packages_root = djangoproject
packages =  djangoproject
            dev

extra_files = 
            README.rst
            CHANGES.rst
            LICENSE.txt
