
[metadata]
name = {{ cookiecutter.project_name }}
version = {{ cookiecutter.version }}
description-file =  README.rst
                    CHANGES.rst
# license = 
requires-dist = setuptools

[files]
packages_root = djangoproject
packages =  djangoproject
            dev

extra_files = 
            README.rst
            CHANGES.rst
            LICENSE.txt
